# block-compression-rs

./: .codecov.yaml  .editorconfig  .gitattributes  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  appveyor.yml
data/bc1/: rust-bc1-linear-no-mipmaps.dds  rust-bc1-srgb-dx10-no-mipmaps.dds
src/: error.rs  lib.rs
src/bc1/: mod.rs
src/format/: error.rs  mod.rs
src/format/dds/: ext.rs  mod.rs
tests/: dds-bc1.rs
tests/data/: LICENSE.md
tests/data/bc1/: rust-bc1-linear-no-mipmaps.dds  rust-bc1-srgb-dx10-no-mipmaps.dds
tests/data/uncomp/: rust-uncomp-no-mipmaps.dds
